--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ gradle
 /.idea/caches/build_file_checksums.ser
 /.idea/libraries
 /.idea/modules.xml
-/.idea/workspace.xml
+.idea/workspace.xml
 .DS_Store
 /build
 /captures
