--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 *.iml
-.gradle/
-gradle
-.idea
-/local.properties
-/build
+*.bat
+*.apk
+# app用到zip的请忽略
+*.zip
+# 自定义了local.properties的请删除这条
+local.properties
 /captures
-.externalNativeBuild
-gradle.properties
+~$*
 gradlew
-gradlew.bat
-/aitest
-/skindemo
-/test
+.DS_Store
+.idea
+.gradle
+# 自定义了根目录gradle/gradle-wrapper.properties的请删除这条（不推荐自定义）
+gradle
+build
